fix: simplify file logic, avoid copy operations